# SheetMind-

./: .env.example  .gitignore  AI_START_HERE.md  CHANGELOG_TASK.MD  Cargo.toml  README.md  docs_tradingagents_agent_prompt_data_notes.md  findings.md  progress.md  task_plan.md
.codex_tmp/: analyze_excel_logic.mjs  check_betting.rs
.trae/: CHANGELOG_TASK.md
cli/: disclosure.py
docs/: AI_HANDOFF.md  DOCUMENTATION_INDEX.md  DOC_UPDATE_POLICY.md  ai-handoff-2026-03-29-boss-report.md  ai-handoff-2026-04-12-foundation-hygiene-export-dto-v1.md  ai-handoff-2026-04-12-foundation-hygiene-grouped-views.md  ai-handoff-2026-04-12-foundation-hygiene-reason-views.md  ai-handoff-2026-04-12-foundation-hygiene-severity-summary.md  ai-handoff-2026-04-12-foundation-hygiene-stability-boundary.md  ai-handoff-2026-04-12-foundation-navigation-evidence-export-tool.md  ai-handoff-2026-04-12-foundation-repository-metadata-audit-export-tool.md  ai-handoff-2026-04-12-foundation-source-ref-diagnostics.md  ai-handoff-2026-04-12-securities-mainline-upload.md  ai-handoff-2026-04-14-branch-upload.md  ai-handoff-2026-04-21-betting-upload.md  execution-notes-2026-03-29-boss-report.md  execution-notes-2026-03-30.md  execution-notes-2026-04-02-security-governance.md  execution-notes-2026-04-07-foundation-navigation-kernel.md  execution-notes-2026-04-08-evidence-assembler.md  execution-notes-2026-04-08-foundation-delivery-closeout.md  execution-notes-2026-04-08-foundation-navigation-pipeline.md  execution-notes-2026-04-08-navigation-pipeline.md  execution-notes-2026-04-08-security-post-meeting-conclusion.md  execution-notes-2026-04-08-security-post-trade-review-closeout.md  execution-notes-2026-04-09-foundation-merge-review.md  execution-notes-2026-04-10-security-condition-review-closeout.md  execution-notes-2026-04-11-security-holding-ledger.md  execution-notes-2026-04-12-github-upload-securities-mainline.md  execution-notes-2026-04-12-p8-lifecycle-closeout.md  execution-notes-2026-04-12-p9-p10-validation-closeout.md  execution-notes-2026-04-12-real-data-validation-backfill.md  execution-notes-2026-04-13-direction-first-training.md  execution-notes-2026-04-13-multi-head-live-validation.md  execution-notes-2026-04-14-branch-upload.md  execution-notes-2026-04-21-betting-upload.md  security-holding-ledger.md  security-training-governance-rules.md  交接摘要_给后续AI.md  交接摘要_证券分析_给后续AI.md
outputs/: calculator_source.xlsm  excel_logic_analysis.json
scripts/: build_betting_vba_asset.ps1  check_binary_delivery_docs.py  run_cross_repo_gates.ps1  run_recovery_regression_gates.ps1
src/: lib.rs  main.rs  runtime_paths.rs
tests/: betting_optimizer_unit.rs  betting_solver_cli.rs  betting_vba_asset_builder_cli.rs  betting_workbook_bridge_cli.rs  capability_router_unit.rs  capacity_assessment_cli.rs  capacity_assessment_excel_report_cli.rs  capacity_assessment_from_inventory_cli.rs  diagnostics_report_cli.rs  diagnostics_report_excel_report_cli.rs  eastmoney_enrichment_cli.rs  evidence_assembler_unit.rs  foundation_design_tools_cli.rs  (+70 more)
(+967 files in other folders)
