[package]
name = "excel_skill"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_rs = "0.8"
calamine = "0.31"
chrono = "0.4"
polars = { version = "0.51", default-features = false, features = ["dtype-date", "dtype-datetime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
rust_xlsxwriter = "0.89"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
zip = "2"
