[package]
name = "excel_skill"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_rs = "0.8"
calamine = "0.31"
chrono = "0.4"
polars = { version = "0.51", default-features = false, features = ["dtype-date", "dtype-datetime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
rust_xlsxwriter = "0.89"
ureq = "2"
# 2026-03-29 CST: 这里增加 eframe 依赖，原因是首发桌面 GUI 方案已确定为 Rust 原生 GUI 壳；
# 目的：为 `sheetmind_app` 提供窗口运行时，同时不改动现有 CLI 主链。
eframe = { version = "0.34.1", default-features = true }
# 2026-03-29 CST: 这里增加 egui_extras 依赖，原因是后续表格预览和布局容器需要 GUI 扩展组件；
# 目的：为 GUI 层的数据预览与紧凑布局提供官方扩展能力。
egui_extras = "0.34.1"
# 2026-03-29 CST: 这里增加 rfd 依赖，原因是桌面 GUI 首版需要原生文件选择器；
# 目的：为“打开 Excel 文件”主路径预留标准文件对话框能力。
rfd = "0.17.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
zip = "2"
